--- a/.github/workflows/dbt-bigquery.yml
+++ b/.github/workflows/dbt-bigquery.yml
@@ -27,4 +27,5 @@ jobs:
         env:
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         run: |
+          cd deploy
           dbt build --target prod
