--- a/.github/workflows/dbt-bigquery.yml
+++ b/.github/workflows/dbt-bigquery.yml
@@ -2,7 +2,7 @@ name: Scheduled dbt Run (BigQuery)
 
 on:
   schedule:
-    - cron: '10 6 * * *'  # every day at 7 AM UTC
+    - cron: '40 6 * * *'  # every day at  8:40AM CEST
   workflow_dispatch:      # manual trigger
 
 jobs:
