--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -7,5 +7,15 @@ sources:
     tables:
       - name: orders
         identifier: raw_orders
+        columns: 
+          - name: id 
+            data_tests: 
+              - not_null
+              - unique
+          - name: status
+            description: "{{ docs('order_status') }}"
+            data_tests:
+              - accepted_values: 
+                  values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
       - name: customers
         identifier: raw_customers
