--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -6,6 +6,17 @@ sources:
     dataset: dbt_marthe_jaffle_shop # project
     tables:
       - name: orders
-        identifier: raw_orders      
+        identifier: raw_orders 
+        columns: 
+          - name: id 
+            data_tests: 
+              - not_null
+              - unique     
+          - name: status
+            description: "{{ doc ('order_status')}}"
+            data_tests:
+               - accepted_values:
+                  values: ['placed', 'shipped', 'completed', 'returned', 'return_pending']
+              
       - name: customers
         identifier: raw_customers
