--- a/jaffle_shop/models/staging/stripe/src_stripe.yml
+++ b/jaffle_shop/models/staging/stripe/src_stripe.yml
@@ -7,3 +7,20 @@ sources:
     tables:
       - name: payments
         identifier: raw_payments
+        columns:
+          - name: id
+            data_tests:
+              - not_null
+              - unique
+          - name: paymentmethod
+            description: "{{ doc ('payment_method')}}"
+            data_tests:
+              - accepted_values:
+                  values: ['bank_transfer', 'credit_card', 'coupon', 'gift_card']
+          - name: status
+            description: "{{ doc ('payment_status')}}"
+            data_tests:
+              - accepted_values:
+                  values: ['success', 'fail']
+
+              
