--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -7,5 +7,20 @@ sources:
     tables:
       - name: orders
         identifier: raw_orders
+        columns: 
+          - name: id
+            data_tests:
+              - not_null
+              - unique
+          - name: status
+            description: "{{ doc('order_status') }}"
+            data_tests: 
+              - accepted_values:
+                  values: ['placed', 'shipped', 'completed', 'returned', 'return_pending']
+          - name: user_id
+            data_tests:
+              - relationships:
+                  to: source('jaffle_shop', 'customers')
+                  field: id
       - name: customers
         identifier: raw_customers
