Add jaffle shop

--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,10 +2,30 @@ version: 2
 
 sources:
   - name: jaffle_shop
-    database: raw  
-    schema: jaffle_shop  
+    description: This is the operational data entry
+    project: sql-training-422508
+    dataset: dbt_lushep_jaffle_shop
     tables:
       - name: customers
         identifier: raw_customers
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
       - name: orders
         identifier: raw_orders
+        columns:
+          - name: id
+            data_tests:
+              - unique
+              - not_null
+          - name: status
+            data_tests:
+              - accepted_values:
+                  values: 
+                    - return
+                    - return_pending
+                    - complete
+                    - shipped
+                    - placed
