Fix accepted values test

--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -24,8 +24,8 @@ sources:
             data_tests:
               - accepted_values:
                   values: 
-                    - return
+                    - returned
                     - return_pending
-                    - complete
+                    - completed
                     - shipped
                     - placed
