--- a/profiles.yml
+++ b/profiles.yml
@@ -12,6 +12,17 @@ jaffle_shop:
       job_retries: 1
       priority: interactive
 
+    stagingenv:
+      type: bigquery
+      method: oauth
+      project: sql-training-422508     
+      dataset: dbt_stagingenv       
+      location: EU
+      threads: 4
+      job_execution_timeout_seconds: 300
+      job_retries: 1
+      priority: interactive
+
     prod:
       type: bigquery
       method: oauth
