--- a/profiles.yml
+++ b/profiles.yml
@@ -1,35 +1,13 @@
 jaffle_shop:
-  target: dev   # default target
   outputs:
     dev:
-      type: bigquery
-      method: oauth
-      project: sql-training-422508
       dataset: dbt_lushep
-      location: EU
-      threads: 4
       job_execution_timeout_seconds: 300
       job_retries: 1
-      priority: interactive
-
-    prod:
-      type: bigquery
+      location: EU
       method: oauth
-      project: sql-training-422508     
-      dataset: dbt_prod        
-      location: EU
-      threads: 4
-      job_execution_timeout_seconds: 300
-      job_retries: 1
       priority: interactive
-
-    stagingenv:
+      project: sql-training-422508
+      threads: 4
       type: bigquery
-      method: oauth
-      project: sql-training-422508     
-      dataset: dbt_stagingenv       
-      location: EU
-      threads: 4
-      job_execution_timeout_seconds: 300
-      job_retries: 1
-      priority: interactive
+  target: dev
