--- a/jaffle_shop/dbt_project.yml
+++ b/jaffle_shop/dbt_project.yml
@@ -6,7 +6,7 @@ name: 'jaffle_shop'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'jaffle_shop'
+profile: 'default'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -32,9 +32,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   jaffle_shop:
     # Config indicated by + and applies to all files under models/example/
-    staging:
+    example:
       +materialized: view
-    intermediate:
-      +materialized: view
-    marts:
-      +materialized: table
